fix horizontal scroll

--- a/src/styles/blocks/home.scss
+++ b/src/styles/blocks/home.scss
@@ -4,6 +4,7 @@
 	display: flex;
 	flex-direction: column;
 	padding-top: 108px;
+	overflow: hidden;
 
 	@include max(1024) {
 		position: relative;
